--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,12 @@
             <artifactId>cucumber-testng</artifactId>
             <version>6.10.4</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.3.0</version>
+        </dependency>
 
 
 
